--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "displayName": "ButterflyMX",
+  "name": "homebridge-butterflymx",
   "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "description": "Homebridge plugin to integrate ButterflyMX devices into HomeKit.",
   "license": "Apache-2.0",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git+https://github.com/ambercaravalho/homebridge-butterflymx.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/github.com/ambercaravalho/homebridge-butterflymx/issues"
   },
   "engines": {
-    "node": "^18.17.0 || ^20.9.0",
-    "homebridge": "^1.8.0"
+    "node": ">=18.17.0",
+    "homebridge": ">=1.8.0"
   },
   "main": "dist/index.js",
   "scripts": {
@@ -32,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^8.57.0",
-    "homebridge": "^1.8.2",
+    "homebridge": "^1.8.3",
     "nodemon": "^3.1.2",
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
